Remove lots of warnings